# connect-four-haskell

./: README.md  connectfour.cabal
app/: Main.hs
src/: Board.hs  Directions.hs  Game.hs  Lib.hs  Types.hs
test/: BoardSpec.hs  DirSpec.hs  GameSpec.hs  Spec.hs
