name:                connectfour
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jamiely/connectfour#readme
license:             BSD3
license-file:        LICENSE
author:              Jamie Ly
maintainer:          jamie.ly@gmail.com
copyright:           Jamie Ly
category:            educational
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Board
                     , Types
                     , Directions
                     , Game
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable connectfour-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , connectfour
  default-language:    Haskell2010

test-suite connectfour-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , connectfour
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jamiely/connectfour
